fix(card): overflow

--- a/app/green-tips/sources/scss/modules/_cards.scss
+++ b/app/green-tips/sources/scss/modules/_cards.scss
@@ -10,11 +10,31 @@
   .card-infos {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
 
     height: 100%;
     padding: 20px;
+  }
 
-    justify-content: stretch;
+  .card-content {
+    max-height: 100%;
+    overflow: hidden;
+
+    position: relative;
+
+    &::before {
+      position: absolute;
+      right: 0;
+      bottom: 0;
+      left: 0;
+
+      height: 50px;
+
+      content: '';
+
+      background: linear-gradient(to bottom, rgba(#ffffff, 0.05) 0%, rgba(#ffffff, 0.7) 50%, rgba(#ffffff, 1) 100%);
+    }
   }
 
   .card__image {
@@ -37,25 +57,10 @@
   .card__resume {
     font-size: 0.8em;
 
-    position: relative;
-
     height: 100%;
 
     p {
       color: $black;
-    }
-
-    &::before {
-      position: absolute;
-      right: 0;
-      bottom: 0;
-      left: 0;
-
-      height: 50px;
-
-      content: '';
-
-      background: linear-gradient(to bottom, rgba(#ffffff, 0.05) 0%, rgba(#ffffff, 0.7) 50%, rgba(#ffffff, 1) 100%);
     }
   }
 }
